0.03

0.02 (August 1, 2011)
- Add check for noexistent Perl module. Add test for it.
- Rewrite 03-pod.t to better version for Perl 5.6.
- Remove "(3pm)" from pod doc.

0.01 (July 15, 2011)
- First version.