@@ -4,15 +4,16 @@ author:
   - 'Michal Špaček <skim@cpan.org>'
 build_requires:
   English: 0
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.36
   File::Object: 0.01
   Test::More: 0
   Test::Pod: 0
   Test::Pod::Coverage: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.36
 distribution_type: module
-generated_by: 'Module::Install version 1.01'
+dynamic_config: 1
+generated_by: 'Module::Install version 1.06'
 license: bsd
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
